fix: attempt to fix: "Found unknown Gradle Wrapper JAR files" thrown by gradle/actions/setup-gradle@v4

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -14,9 +14,11 @@
 # limitations under the License.
 #
 
-#Tue Oct 22 14:17:50 CEST 2019
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.1.1-all.zip
+#Thu Aug 29 11:49:50 CEST 2024
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.1.1-bin.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStorePath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
+networkTimeout=10000
+validateDistributionUrl=true
