--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
 #
-#     https://www.apache.org/licenses/LICENSE-2.0
+#      https://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
@@ -13,12 +13,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+#
 
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 FlightRecorderOptions=stackdepth=64
 kotlinVersion=1.8.20
 serializationVersion=1.5.0
 jvmVersion=11
-reloadVersion=develop-SNAPSHOT
+reloadVersion=1.4.0
 jarikoGroupId=io.github.smeup.jariko
 jarikoVersion=develop-SNAPSHOT
