feat: centralize junit version inside gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,7 @@ FlightRecorderOptions=stackdepth=64
 kotlinVersion=2.0.20
 serializationVersion=1.7.3
 jvmVersion=11
+junitVersion=5.11.1
 reloadVersion=develop-SNAPSHOT
 jarikoGroupId=io.github.smeup.jariko
 jarikoVersion=develop-SNAPSHOT
