--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -22,7 +22,7 @@ dependencies {
     implementation project(":rpgJavaInterpreter-core")
     testImplementation "org.jetbrains.kotlin:kotlin-test:$kotlinVersion"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlinVersion"
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.1'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
 }
 
 task javadocJar(type: Jar) {
