--- a/kolasu/build.gradle
+++ b/kolasu/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
     testImplementation "org.jetbrains.kotlin:kotlin-test:$kotlinVersion"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlinVersion"
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.1'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
 
     implementation 'com.fifesoft:rsyntaxtextarea:3.5.1'
     implementation 'com.fifesoft:autocomplete:3.3.1'
