--- a/rpgJavaInterpreter-core/build.gradle
+++ b/rpgJavaInterpreter-core/build.gradle
@@ -76,7 +76,7 @@ dependencies {
 
     testImplementation "org.jetbrains.kotlin:kotlin-test:$kotlinVersion"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlinVersion"
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.1'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testImplementation 'org.hsqldb:hsqldb:2.7.3'
     testImplementation 'org.mockito.kotlin:mockito-kotlin:5.4.0'
 }
