--- a/gradle.properties
+++ b/gradle.properties
@@ -21,6 +21,7 @@ kotlinVersion=2.0.20
 serializationVersion=1.7.3
 jvmVersion=11
 junitVersion=5.11.1
+antlrVersion=4.13.2
 reloadVersion=develop-SNAPSHOT
 jarikoGroupId=io.github.smeup.jariko
 jarikoVersion=develop-SNAPSHOT
