--- a/rpgJavaInterpreter-core/build.gradle
+++ b/rpgJavaInterpreter-core/build.gradle
@@ -5,13 +5,14 @@
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *     https://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
+ *
  */
 
 import java.text.SimpleDateFormat
@@ -63,7 +64,10 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-core:2.24.1'
 
     implementation 'commons-io:commons-io:2.17.0'
-    implementation 'com.github.ajalt:clikt:3.5.2'
+    implementation("com.github.ajalt:clikt:3.5.2") {
+        exclude group: 'com.github.ajalt.clikt', module: 'clikt-linuxx64'
+        exclude group: 'com.github.ajalt.clikt', module: 'clikt-mingwx64'
+    }
 
     api "io.github.smeup.reload:base:$reloadVersion"
     api "io.github.smeup.reload:sql:$reloadVersion"
