--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,6 @@ serializationVersion=1.7.3
 jvmVersion=11
 junitVersion=5.11.1
 antlrVersion=4.13.2
-reloadVersion=develop-SNAPSHOT
+reloadVersion=1.5.0
 jarikoGroupId=io.github.smeup.jariko
-jarikoVersion=develop-SNAPSHOT
+jarikoVersion=v1.7.0
