--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,14 @@
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *     https://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
+ *
  */
 
 //-----------------
@@ -58,6 +59,10 @@ subprojects {
     repositories {
         mavenLocal()
         mavenCentral()
+        maven {
+            name 'Smeup Nexus'
+            url 'https://repo.smeup.cloud/nexus/repository/public/'
+        }
         maven { url 'https://jitpack.io' }
         // the sonatype repo inclusion allows to work with the reload snapshot version
         maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots/' }
