--- a/gradle.properties
+++ b/gradle.properties
@@ -5,14 +5,13 @@
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
 #
-#      https://www.apache.org/licenses/LICENSE-2.0
+#     https://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-#
 #
 
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
@@ -22,6 +21,6 @@ serializationVersion=1.7.3
 jvmVersion=11
 junitVersion=5.11.1
 antlrVersion=4.13.2
-reloadVersion=develop-SNAPSHOT
+reloadVersion=1.5.1
 jarikoGroupId=io.github.smeup.jariko
-jarikoVersion=develop-SNAPSHOT
+jarikoVersion=v1.8.0
