chore: update jariko and reload versions in gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,8 +15,8 @@
 #
 
 jarikoGroupId=io.github.smeup.jariko
-jarikoVersion=develop-SNAPSHOT
-reloadVersion=develop-SNAPSHOT
+jarikoVersion=v1.9.0
+reloadVersion=1.5.1
 
 kotlinVersion=2.0.20
 serializationVersion=1.7.3
