--- a/gradle.properties
+++ b/gradle.properties
@@ -15,8 +15,8 @@
 #
 
 jarikoGroupId=io.github.smeup.jariko
-jarikoVersion=v1.9.0
-reloadVersion=1.5.1
+jarikoVersion=develop-SNAPSHOT
+reloadVersion=develop-SNAPSHOT
 
 kotlinVersion=2.0.20
 serializationVersion=1.7.3
