--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ rpgJavaInterpreter-core/src/main/antlr/gen/
 lib
 *.tokens
 /rpgJavaInterpreter-core/src/main/resources/META-INF/com.smeup.jariko/version.txt
+.claude
