--- a/gradle.properties
+++ b/gradle.properties
@@ -15,8 +15,8 @@
 #
 
 jarikoGroupId=io.github.smeup.jariko
-jarikoVersion=develop-SNAPSHOT
-reloadVersion=develop-SNAPSHOT
+jarikoVersion=v2.0.0
+reloadVersion=1.6.0
 
 kotlinVersion=2.1.0
 serializationVersion=1.7.3
